@@ -13,6 +13,7 @@ CHANGES
   before testing it.
 * Issue #306: Even if 2to3 is used, we build in-place under Python 2.
 * Issue #307: Prints the full path when .svn/entries is broken.
+* Issue #313: Support for sdist subcommands (Python 2.7)
 
 ------
 0.6.28
